# Branches2

./: .gitignore  CMakeLists.txt  Makefile  main.cpp  main.hpp
core/: core.cpp  core.hpp  functions.cpp  functions.hpp
exceptions/: exceptions.hpp
parser/: parser_tools.cpp
plot/: plot.hpp
src/: main.cpp  main.hpp
src/cli/: cli.cpp  cli.hpp
src/core/: core.cpp  core.hpp  functions.cpp  functions.hpp  types.hpp
src/integration/: integration.cpp  integration.hpp
src/parser/: parser.cpp  parser.hpp  parser_tools.cpp  parser_tools.hpp
src/plot/: plot.cpp  plot.hpp
